# origami

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
origami_app/: CMakeLists.txt  README.md  origami_check.cpp
origami_doc/doxygen/: doxyfile.doxy
origami_funny/: README.md
origami_lexical/: CMakeLists.txt
origami_lexical/include/origami_lexical/conventions/: character_sets.hpp  exeptions.hpp  forward.hpp  tokens.hpp
origami_lexical/include/origami_lexical/lexical_analyzer/: lexical_analyzer.hpp
origami_lexical/include/origami_lexical/lexical_conventions/: lexical_convention_cpp.hpp  lexical_convention_impl.hpp  lexical_convention_python.hpp
origami_lexical/include/origami_lexical/symbol_table/: symbol_table_cpp.hpp  symbol_table_impl.hpp  symbol_table_python.hpp
origami_lexical/include/origami_lexical/tokenizers/: lexical_conventions.hpp
origami_lexical/src/: character_sets.cpp  lexical_convention_cpp.cpp  lexical_convention_python.cpp  lexical_conventions.cpp  symbol_table_cpp.cpp  symbol_table_python.cpp
origami_syntax/: CMakeLists.txt  README.md
origami_syntax/include/origami_syntax/parsing/: abstract_syntax_tree.hpp  syntax_analysis.hpp
origami_syntax/include/origami_syntax/parsing/detail/: concepts.hpp  utility.hpp
origami_syntax/src/: abstract_syntax_tree.cpp  syntax_analysis.cpp  utility.cpp
origami_test/: CMakeLists.txt  abstract_syntax_tree_test.cpp  character_sets_test.cpp  lexical_analysis_test.cpp  main_test.cpp  operators_test.cpp  preprocessor_test.cpp  tokens_test.cpp
